# us-stock-research

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
config/: a_pool.yaml  etf_universe.csv  m_pool_overrides.yaml  macro_symbols.yaml  params.yaml  themes.yaml  thresholds.yaml
data/: universe_filter.py
db/: schema.sql
db/migrations/: 003_create_daily_indicators.sql  004_create_signals_l1_l2.sql  005_extend_signals_for_l3_l4.sql  006_add_macro_state_to_signals_daily.sql  2026_04_28_add_macro_daily_us2y.sql
deploy/: README.md  cloud_run_jobs.yaml  cloud_scheduler.yaml  daily.sh  weekly_backup.sh
deploy/cloud_run/: compute-indicators-daily.yaml  signals-daily.yaml
deploy/scheduler/: compute-indicators-daily.yaml  quotes-etl-job.yaml  signals-daily-job.yaml
docs/: README.md
docs/_raw/: adr-source.md  core-logic-source.md  v5.7-taskbook-source.md
docs/changes/: 2026-04-V5.7.md  2026-04-V5_PLUS_1.md
docs/codex-deliveries/: d-quick-p2-fixes.md  m2-s1-curate-universe.md
docs/core/: adr.md  (+5 more)
lib/: fmp_client.py  gcs_client.py  pg_client.py
migrations/: 001_signals_m_pool.sql  002_signals_a_pool.sql  20260427_p2_13_macro_daily_drop_close_suffix.sql
reports/: reconcile_2026-04-29.md
scripts/: backfill_indicators.py  backfill_quotes.py  backfill_signals.py  backfill_treasury.py  bootstrap_etf_quotes.py  bootstrap_history.py  compute_indicators.py  deploy_signals_job.sh  deploy_signals_pipeline.ps1  export_etf_audit.py.m2_fix_needed  reconcile_indicators.py  run_signals.py
tests/: test_breadth.py  test_compute_indicators.py  test_etf_holdings_bad_weights.py  test_etf_holdings_monthly.py  test_hysteresis.py  test_macro_daily.py  test_macro_signal.py  test_quotes_daily.py  test_reconcile_formulas.py  test_regime.py  test_sectors.py  test_signals_integration.py  test_stocks.py  test_themes.py
(+41 files in other folders)
