[project]
name = "us-stock-research-workspace"
version = "0.1.0"
description = "Personal US stock research monorepo workspace."
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
dev = [
  "pytest==8.3.4",
  "ruff==0.8.3",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
